--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                         <button 
                         class="btn btn-color-2"
-                        onclick="location.href='./#contacts'">Conatac Info</button>
+                        onclick="location.href='./#contacts'">Contact Info</button>
 
 
                     </div>
@@ -330,7 +330,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2023 Jeemee Sakariya. All Rights Reserved.</p>
+        <p>Copyright &#169; 2023 Miraj Butani. All Rights Reserved.</p>
     </footer>   
     <script src="script.js"></script>
 </body>
